# automine

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: commands.rs  main.rs
client/src/common/: config.rs  constants.rs  crypto.rs  mod.rs
client/src/system/: c2.rs  logic.rs  mod.rs  network.rs  process.rs  registry.rs  shadow.rs
client/src/utils/: files.rs  paths.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: server.rs
crates/node/: Cargo.toml
crates/node/src/common/: constants.rs
crates/node/src/system/: c2.rs  process.rs  transport.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
server/: go.mod
server/cmd/server/: main.go
server/pkg/c2/: client.go  hub.go
server/pkg/protocol/: types.go
src/: commands.rs
src/common/: constants.rs
src/system/: mod.rs  network.rs  process.rs
