[package]
name = "automine"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rand = "0.9.2"
hostname = "0.4.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
    "processthreadsapi", 
    "winbase", 
    "shellapi",
    "winuser",
    "handleapi",
    "winnt",
    "jobapi2",
    "wincon"
] }
