[package]
name = "automine"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
hostname = "0.4.2"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
    "processthreadsapi", 
    "winbase", 
    "shellapi",
    "winuser",
    "handleapi",
    "winnt",
    "jobapi2",
    "wincon"
] }


