[package]
name = "node"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8.5"
hostname = "0.4.2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
native-tls = "0.2.14"
chacha20poly1305 = "0.10.1"
x25519-dalek = "2.0.1"
sha2 = "0.10.9"
sysinfo = "0.37.2"
once_cell = "1.21.3"
protocol = { version = "0.1.0", path = "../protocol" }
lru = "0.16.2"
rand_core = "0.6.4"
obfstr = "0.4.4"
chrono = "0.4.42"
arti-client = "0.37.0"
tor-rtcompat = { version = "0.37.0", features = ["tokio", "native-tls"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
    "processthreadsapi", 
    "winbase", 
    "shellapi",
    "winuser",
    "handleapi",
    "winnt",
    "jobapi2",
    "wincon"
] }


