[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
obfstr = "0.4.4"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
x25519-dalek = "2.0.1"
